--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,8 @@
 {
     "scripts": {
         "serve": "zola serve --port 2000",
-        "build": "zola build --output-dir public && node deploy.js"
+        "build": "zola build --output-dir public",
+        "deploy": "node deploy.js"
     },
     "dependencies": {
         "fs-extra": "^8.1.0"
