--- a/src/package.json
+++ b/src/package.json
@@ -1,8 +1,7 @@
 {
     "scripts": {
         "serve": "zola serve --port 2000",
-        "build": "zola build --output-dir public",
-        "deploy": "node deploy.js"
+        "build": "zola build --output-dir public"
     },
     "dependencies": {
         "fs-extra": "^8.1.0"
