--- a/now.json
+++ b/now.json
@@ -1,11 +1,5 @@
 {
 	"name": "keb",
 	"alias": "keb.now.sh",
-	"version": 2,
-	"builds": [
-		{ "src": "./src/public/**", "use": "@now/static" }
-	],
-	"routes": [
-		{ "src": "/(.*)", "dest": "public/$1" }
-	]
+	"version": 2
 }
