move zola folder

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "keb site",
   "main": "null",
   "scripts": {
+  	"build": "zola build --output-dir dist",
     "deploy": "now ./dist --prod"
   },
   "repository": {
