--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "keb site",
   "main": "null",
   "scripts": {
-  	"build": "zola build",
+    "build": "zola build",
     "deploy": "now ./public --prod"
   },
   "repository": {
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/keb/keb.now.sh/issues"
   },
-  "homepage": "https://github.com/keb/keb.now.sh#README"
+  "homepage": "https://github.com/keb/keb.now.sh#README",
+  "dependencies": {
+    "now": "^16.7.1"
+  }
 }
