--- a/now.json
+++ b/now.json
@@ -1,5 +1,10 @@
 {
-	"name": "keb",
-	"alias": "keb.now.sh",
-	"version": 2
+    "name": "keb",
+    "alias": "keb.now.sh",
+    "version": 2,
+    "routes": [
+        { "src": "/(.*)", "dest": "/$1" },
+        { "handle": "filesystem" },
+        { "src": "/.*", "status": 404, "dest": "/404" }
+    ]
 }
