--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,9 @@ highlight_code = true
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
 
+# rss feed https://www.getzola.org/documentation/templates/feeds/
+generate_feed = true
+
 [extra]
 # Put all your custom variables here
 title = "keb"
