--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Github Pages
 on:
   push:
     branches:
@@ -7,10 +7,10 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
-
-      - name: Install and Build
+      - uses: actions/checkout@v1
+      # Set up any tools and build steps here
+      # This example uses a Node.js toolchain to build a site
+      - name: Install and Run Zola
         run: |
           sudo snap install --edge zola
           zola build
