--- a/.github/workflows/gitlab_pages.yml
+++ b/.github/workflows/gitlab_pages.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch:
+    inputs:
+      tags:
+        description: 'Description tag.'  
 
 jobs:
   build:
