--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
     "name": "keb",
     "alias": "keb.now.sh",
-    "version": 2
+    "version": 2,
+    "redirects": [
+        { 
+            "source": "/",
+            "destination": "https://keb.sheev.net", 
+            "permanent": true
+        }
+    ]
 }
