--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     "version": 2,
     "redirects": [
         { 
-            "source": "/",
+            "source": "/*",
             "destination": "https://keb.sheev.net", 
             "permanent": true
         }
